[project]
name = "bosch-smart-home-camera-tool"
version = "10.10.1"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "urllib3",
    "defusedxml>=0.7.1",
]

[project.scripts]
bosch-camera = "bosch_camera:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# Project-wide strict typing (family-parity with the HA integration).
python_version = "3.10"
strict = true
ignore_missing_imports = true
